--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <!--[if lt IE 9]>
         <script type="text/javascript" src="aight.min.js"></script>
         <![endif]-->
