--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <!--[if lt IE 9]>
-    <script type="text/javascript" src="aight.min.js"></script>
+    <script src="aight.min.js"></script>
     <![endif]-->
   </head>
 </html>
