move d3.html from examples/ to test/, tweak

--- a/test/d3.html
+++ b/test/d3.html
@@ -70,7 +70,7 @@
         .enter().append("li")
           .text(function(d) { return d; });
 
-      items.sort();
+      items.sort(d3.ascending);
 
     })();
     </script>
