--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <!--[if lt IE 9]>
+    <!--[if lte IE 9]>
     <script src="aight.min.js"></script>
     <![endif]-->
   </head>
